* Prevent ads shifting on main page (only FAST_HOME1 and FAST_HOME2)

--- a/wikia/releases/200806.4/skins/monaco/css/root.css
+++ b/wikia/releases/200806.4/skins/monaco/css/root.css
@@ -55,17 +55,15 @@ body.mainpage {
 	width: 50%;
 	z-index: 2;
 }
-/*
-body.mainpage #adSpace1 {
+body.mainpage .FAST_HOME1 {
 	height: 90px;
 	margin-bottom: 10px;
 }
-body.mainpage #adSpace0 {
+body.mainpage .FAST_HOME2 {
 	float: right;
 	min-height: 250px;
 	width: 300px;
 }
-*/
 .clearfix:after {
     content: ".";
     display: block;
